# ecom-fashion

./: .gitignore  BUILD_COMMANDS.md  README.md  TAURI_ANDROID_GUIDE.md  build-android.ps1  nuxt.config.ts  package.json  start-emulator.bat  start-emulator.ps1  vuetify.config.ts
.github/workflows/: deployment.yml
assets/styles/: main.scss
components/authentication/: Alphanumeric.vue  Pin.vue
components/chat/: Header.vue  InputFooter.vue  IssueCard.vue  IssueMessage.vue  MessageCard.vue  OrderMessage.vue  ReceiverCard.vue  SenderCard.vue  TextMessage.vue  VoucherMessage.vue
components/form/: BigButton.vue  Cancel.vue  Email.vue  IconBtnText.vue  IconRipple.vue  Password.vue  PhoneNumber.vue  Pin.vue
components/items/: AdvCard.vue  Avatar.vue  CartItemCard.vue  CategoryCard.vue  CategoryDialog.vue  CategoryExpansion.vue  ChipLabel.vue  ContainerCard.vue  DirectionBoard.vue  DiscountProductCard.vue  FlashSaleCard.vue  HeaderTitle.vue  NewItemCard.vue  PaymentItemCard.vue  PopularItemCard.vue  ProductCard.vue  ProductDescription.vue  ReviewCard.vue  SaleCard.vue  (+3 more)
composables/: useCart.ts  useCartItems.ts  useIssues.ts  useOrders.ts  useProducts.ts  useSearchQuery.ts  useTracker.ts  useWishlist.ts  useWishlistItems.ts
layouts/: blank.vue  default.vue  fullview.vue  product.vue  profile.vue  sale.vue  shop.vue
pages/: authentication.vue  create-account.vue  index.vue  login.vue  password-recovery.vue  reset-password.vue  welcome.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
storage/: products.json
utils/: index.ts
(+81 files in other folders)
