[package]
name = "ecom-fashion"
version = "0.1.0"
description = "Ecom Fashion - Modern E-commerce Mobile App"
authors = ["Cuong Dinh <cuongdinhngo@example.com>"]
license = "MIT"
repository = "https://github.com/cuongdinhngo/ecom-fashion"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.6.2", features = ["config-json5"] }

# Android-specific dependencies
[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"

# Optional: Add these if you need specific mobile features
# tauri-plugin-shell = "2.0"
# tauri-plugin-dialog = "2.0"
# tauri-plugin-fs = "2.0"
